--- a/whereaminow.html
+++ b/whereaminow.html
@@ -15,7 +15,7 @@
 <body>
 	<div class="side-bar">
 		<div class="logo-sidebar">
-			<a href="./index.html" class="logo-img"><img src="./IMGS/logo.png" alt="JSblog" /></a>
+			<a href="./index.html" class="logo-img"><img src="./imgs/logo.png" alt="JSblog" /></a>
 		</div>
 		<div class="questions">
 			<ul class="question-where-here">
@@ -76,7 +76,7 @@
 			</div>
 
 			<div class="logo">
-				<a href="./index.html" class="logo-img"><img src="./IMGS/logo.png" alt="JSblog" /></a>
+				<a href="./index.html" class="logo-img"><img src="./imgs/logo.png" alt="JSblog" /></a>
 			</div>
 		</header>
 
