--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 					<a href="">css (0) </a>
 				</li>
 				<li class="categorey">
-					<a href="">javascript(0) </a>
+					<a href="./index.html">javascript(1) </a>
 				</li>
 				<li class="categorey">
-					<a href="">books(1)</a>
+					<a href="./books.html">books(1)</a>
 				</li>
 			</ul>
 			<ul class="very-dirty">
@@ -434,10 +434,9 @@
 
 		<footer class="footer">
 			<div class="social-media">
-				<span class="media"><a href=""><i class="fa fa-twitter flip-vertical-fwd"></i></a></span>
-				<span class="media"><a href=""><i class="fa fa-github flip-vertical-fwd"></i></a></span>
-				<span class="media"><a href=""><i class="fa fa-linkedin flip-vertical-fwd"></i></a></span>
-				<span class="media"><a href=""><i class="fa fa-instagram flip-vertical-fwd"></i></a></span>
+				<span class="media"><a href="https://twitter.com/wahbi_jed"> <i class="fa fa-twitter"></i></a></span>
+				<span class="media"><a href="https://github.com/abdul2025"><i class="fa fa-github"></i></a></span>
+				<span class="media"><a href="https://linkedin.com/in/abdulwahab-alshehri"><i class="fa fa-linkedin"></i></a></span>
 			</div>
 			<div class="copyright">
 				<p>@2019 JSBLOG</p>
