fix whereAmI page url

--- a/books.html
+++ b/books.html
@@ -20,9 +20,8 @@
 		<div class="questions">
 			<ul class="question-where-here">
 				<li>
-					<a href="./whereaminow.html">
-						Where am I <span class="dirty">NOW ?</span>
-					</a>
+					
+					<a href="./whereaminow.html"> Where am I <span class="dirty">NOW ?</span></a>
 				</li>
 				<li>
 					<a href="./books.html"> Hello <span class="dirty">World</span> !!</a>
