--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div class="questions">
 			<ul class="question-where-here">
 				<li>
-					<a href="file:///C:/Users/wahbi/Downloads/eproject/blog/whereaminow.html">
+					<a href="./whereaminow.html">
 						Where am I <span class="dirty">NOW ?</span>
 					</a>
 				</li>
